# tyro

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
assets/: .gitkeep
docs/img/: README.md
shaders/: blit.frag  blit.vert  brdf_lut.frag  brick.frag  checker.frag  checker.vert  cubemap_capture.vert  debug_line.frag  debug_line.vert  equirect_to_cube.frag  explode.frag  explode.geom  explode.vert  hex.frag  hologram.frag  iridescent.frag  irradiance_conv.frag  marble.frag  normals.frag  normals.geom  normals.vert  pbr.frag  pbr.vert  phong_lit.frag  phong_lit.vert  post_blur.frag  post_bright.frag  post_chromatic.frag  post_composite.frag  post_fog.frag  post_fxaa.frag  post_godrays.frag  post_passthrough.frag  post_sobel.frag  post_ssao.frag  post_tonemap.frag  prefilter.frag  rim.frag  rim.vert  shadow_depth.frag  (+15 more)
src/: Demo.h  main.cpp
src/core/: Engine.cpp  Engine.h
src/loader/: ObjLoader.cpp  ObjLoader.h
src/math/: AABB.h  Frustum.h  Math.h
src/renderer/: Cubemap.cpp  Cubemap.h  DebugDraw.cpp  DebugDraw.h  FrameBuffer.cpp  FrameBuffer.h  GpuTimer.cpp  GpuTimer.h  IblBaker.cpp  IblBaker.h  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  ProceduralTextures.cpp  ProceduralTextures.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h
src/scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  FlyCamera.cpp  FlyCamera.h  Light.h  Material.cpp  Material.h  Octree.cpp  Octree.h  Scene.cpp  Scene.h
src/scenes/: scene_atrium.cpp  scene_day_night.cpp  scene_effects.cpp  scene_geometry_lab.cpp  scene_ibl_focus.cpp  scene_light_garden.cpp  scene_materials.cpp  scene_octree_stress.cpp  scene_pbr_showcase.cpp  scene_shadow_theatre.cpp  scene_showcase.cpp  scene_spot_stage.cpp  scene_texture_showcase.cpp  scene_water_pond.cpp
src/window/: Window.cpp  Window.h
